completed teacher Events
